--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https:///www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="420" src="http://www.youtube.com/embed/{{ include.video }}?color=white&amp;theme=light"></iframe>
