try new youtube include

--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,1 +1,3 @@
+<div>
 <iframe width="560" height="420" src="http://www.youtube.com/embed/{{ include.video }}?color=white&amp;theme=light"></iframe>
+</div>
