Add disqus. Remove weather.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,11 @@ layout: default
   <article class="post-content">
   {{ content }}
   </article>
+  {% include twitter_button.html %}
+  {% include googleplus_button.html %}
+  
+  {% if page.comments %}
+    {% include discus_comments.html %}
+  {% endif %}
 
 </div>
