--- a/_includes/discus_comments.html
+++ b/_includes/discus_comments.html
@@ -12,7 +12,7 @@
     */
     (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
         var d = document, s = d.createElement('script');
-        var developer_mode = 1;
+        //var developer_mode = 1;
         s.src = '//sys49152-net.disqus.com/embed.js';  // IMPORTANT: Replace EXAMPLE with your forum shortname!
         
         s.setAttribute('data-timestamp', +new Date());
